--- a/index.html
+++ b/index.html
@@ -133,18 +133,14 @@
                     <div class="card">
                         <div class="card-body">
                             <h3 class="card-title pt-3">Video</h3>
-                            <video width="" height="270" controls class="videow">
-                                <source src="./videos/gip video.mp4" type="video/mp4">
-                            </video>
+                                <iframe width="460" height="260" src="https://www.youtube.com/embed/CyO033Tunbw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                             <p>In deze video word door 1 van mijn beste vrienden het spel poolen uitgelegd. Van wat je allemaal nodig hebt tot hoe het spel in elkaar zit en wat je moet doen. Geniet ervan.</p>
                         </div>
                     </div>
                     <div class="card">
                         <div class="card-body">
                             <h3 class="card-title pt-3">Typoanimatie</h3>
-                            <video width="" height="270" controls class="videow">
-                                <source src="./videos/typoanimatie.mp4" type="video/mp4">
-                            </video>
+                            <iframe width="460" height="260" src="https://www.youtube.com/embed/eucAoS8n7Aw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                             <p>Hier kan u altijd mijn typoanimatie vinden op het liedje "Sink the pink".</p>
                         </div>
                     </div>
@@ -171,7 +167,7 @@
                         <a href="#" class="card-title mb-2"><h5>Patrick Jacob</h5></a>
                         <p class="card-text">Ik ben 18 en zit in mijn laatste schooljaar op TSM en deze Website is voor mijn GIP. Poolen is voor mij heel belangrijk, het is een bezigheid als ik en mijn vrienden uitgaan of als ik en mijn vader het spelen. Daarom heb ik dit als mijn GIP gekozen. Als je naar 'ANIMATIONS' gaat vind je ook mijn typoanimatie en video. Ik hoop dat iedereen het mooi vond.</p>
                         <div class="text-center">
-                            <a href="#" class="btn btn-primary"><i class="fab fa-instagram"></i> Mijn Instagram</a>
+                            <a href="https://www.instagram.com/patrickk_jacobb/" class="btn btn-primary"><i class="fab fa-instagram"></i> Mijn Instagram</a>
                         </div>
                     </div>
                 </div>
