--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <a class="nav-link page-scroll" href="#overmij">Over mij</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link page-scroll d-flex flex-row align-items-center text-primary" href="#">
+                        <a class="nav-link page-scroll d-flex flex-row align-items-center text-primary" href="#yeet">
                             <em data-feather="layout" width="18" height="18" class="mr-2"></em>
                             Contact
                         </a>
@@ -181,7 +181,7 @@
         <div class="row">
             <div class="col-md-10 mx-auto text-center">
                 <form class="my-form rondehoeken">
-                  <div class="container yeet">
+                  <div class="container yeet" id="yeet">
                     <h1>Send us a message!</h1>
                     <ul style="padding: 0">
                       <div>
